[gd_scene load_steps=23 format=3 uid="uid://1wmh7fl8b55w"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_whbl5"]
[ext_resource type="Texture2D" uid="uid://drjjn71psomr7" path="res://assets/gfx/player_sheet_2.png" id="2_urwua"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gkwlk"]
atlas = ExtResource("2_urwua")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oth8q"]
atlas = ExtResource("2_urwua")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vruo"]
atlas = ExtResource("2_urwua")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5de"]
atlas = ExtResource("2_urwua")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h70lh"]
atlas = ExtResource("2_urwua")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25d32"]
atlas = ExtResource("2_urwua")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytqtq"]
atlas = ExtResource("2_urwua")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul3l7"]
atlas = ExtResource("2_urwua")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5y2m"]
atlas = ExtResource("2_urwua")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5d40"]
atlas = ExtResource("2_urwua")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgprp"]
atlas = ExtResource("2_urwua")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvv2c"]
atlas = ExtResource("2_urwua")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gotpa"]
atlas = ExtResource("2_urwua")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik82e"]
atlas = ExtResource("2_urwua")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tlvp"]
atlas = ExtResource("2_urwua")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj6qu"]
atlas = ExtResource("2_urwua")
region = Rect2(48, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_so5xi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkwlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oth8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vruo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5de")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h70lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25d32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytqtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul3l7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5y2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5d40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgprp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvv2c")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gotpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik82e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tlvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj6qu")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7aly"]
size = Vector2(14, 15.9484)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_h0l66"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwjvu"]
size = Vector2(1, 1)

[node name="Player" type="CharacterBody2D"]
collision_mask = 19
motion_mode = 1
script = ExtResource("1_whbl5")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(26, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_so5xi")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.0434)
scale = Vector2(1, 1.00868)
shape = SubResource("RectangleShape2D_b7aly")

[node name="ActionIndicatorSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.156863)
position = Vector2(18, 3)
scale = Vector2(16, 16)
texture = SubResource("PlaceholderTexture2D_h0l66")

[node name="ActionIndicatorArea2D" type="Area2D" parent="ActionIndicatorSprite"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionIndicatorSprite/ActionIndicatorArea2D"]
position = Vector2(0, 8.92063e-09)
shape = SubResource("RectangleShape2D_jwjvu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_shape_entered" from="ActionIndicatorSprite/ActionIndicatorArea2D" to="." method="_on_action_indicator_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="ActionIndicatorSprite/ActionIndicatorArea2D" to="." method="_on_action_indicator_area_2d_area_shape_exited"]
